--- a/Okhome/app/build.gradle
+++ b/Okhome/app/build.gradle
@@ -19,6 +19,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -27,4 +31,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'joda-time:joda-time:2.9.3'
+    compile 'com.facebook.android:facebook-android-sdk:4.11.0'
 }
