--- a/Okhome/app/src/main/AndroidManifest.xml
+++ b/Okhome/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -34,7 +33,11 @@
         <activity
             android:name=".OrderActivity"
             android:label="@string/title_activity_order"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TopUpActivity"
+            android:label="@string/title_activity_top_up"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
