Edited all the guest, members actions in MainActivity

--- a/Okhome/app/src/main/AndroidManifest.xml
+++ b/Okhome/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity
             android:name=".TopUpActivity"
             android:label="@string/title_activity_top_up"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".LogOutActivity"></activity>
     </application>
 
 </manifest>
