--- a/Okhome/app/build.gradle
+++ b/Okhome/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
+    compile 'com.android.support:cardview-v7:23.0.+'
     compile 'joda-time:joda-time:2.9.3'
 }
